fix: revert dark mode

--- a/docs-website/src/styles/global.scss
+++ b/docs-website/src/styles/global.scss
@@ -211,15 +211,17 @@ div[class^="announcementBar"] {
   padding: 2rem 0;
   height: 100%;
   margin: 2rem 0;
+  background: #34394d;
   border-radius: var(--ifm-card-border-radius);
 }
 
 .quickstart__title {
-
+  color: #fafafa;
 }
 
 .quickstart__subtitle {
   font-size: 1.1rem;
+  color: gray;
 }
 
 .quickstart__codeblock {
